--- a/genweb/organs/browser/stylesheets/genweb_organs.css
+++ b/genweb/organs/browser/stylesheets/genweb_organs.css
@@ -887,7 +887,11 @@ dt.contenttype-genweb-organs-historicfolder:before,
 i.icon-genweb-organs-historicfolder,
 span.icon-genweb-organs-historicfolder,
 #listing-table a.contenttype-genweb-organs-historicfolder:before,
-.template-folder_tabular_view .listing a.contenttype-genweb-organs-historicfolder:before
+.template-folder_tabular_view .listing a.contenttype-genweb-organs-historicfolder:before,
+.subnavbar .nav-list .active ul a[class^="contenttype-genweb-organs-historicfolder"] span:after,
+.subnavbar .nav-list .selected ul a[class^="contenttype-genweb-organs-historicfolder"] span:after,
+.subnavbar .nav-list .active ul a[class*=" contenttype-genweb-organs-historicfolder"] span:after,
+.subnavbar .nav-list .selected ul a[class*=" contenttype-genweb-organs-historicfolder"] span:after
 {
     background-position: -242px -168px !important;
 }
@@ -896,7 +900,11 @@ dt.contenttype-genweb-organs-organgovern:before,
 i.icon-genweb-organs-organgovern,
 span.icon-genweb-organs-organgovern,
 #listing-table a.contenttype-genweb-organs-organgovern:before,
-.template-folder_tabular_view .listing a.contenttype-genweb-organs-organgovern:before
+.template-folder_tabular_view .listing a.contenttype-genweb-organs-organgovern:before,
+.subnavbar .nav-list .active ul a[class^="contenttype-genweb-organs-organgovern"] span:after,
+.subnavbar .nav-list .selected ul a[class^="contenttype-genweb-organs-organgovern"] span:after,
+.subnavbar .nav-list .active ul a[class*=" contenttype-genweb-organs-organgovern"] span:after,
+.subnavbar .nav-list .selected ul a[class*=" contenttype-genweb-organs-organgovern"] span:after
 {
     background-position: -48px -48px !important;
 }
@@ -905,7 +913,11 @@ dt.contenttype-genweb-organs-sessio:before,
 i.icon-genweb-organs-sessio,
 span.icon-genweb-organs-sessio,
 #listing-table a.contenttype-genweb-organs-sessio:before,
-.template-folder_tabular_view .listing a.contenttype-genweb-organs-sessio:before
+.template-folder_tabular_view .listing a.contenttype-genweb-organs-sessio:before,
+.subnavbar .nav-list .active ul a[class^="contenttype-genweb-organs-sessio"] span:after,
+.subnavbar .nav-list .selected ul a[class^="contenttype-genweb-organs-sessio"] span:after,
+.subnavbar .nav-list .active ul a[class*=" contenttype-genweb-organs-sessio"] span:after,
+.subnavbar .nav-list .selected ul a[class*=" contenttype-genweb-organs-sessio"] span:after
 {
     background-position: -312px -168px !important;
 }
@@ -914,7 +926,11 @@ dt.contenttype-genweb-organs-document:before,
 i.icon-genweb-organs-document,
 span.icon-genweb-organs-document,
 #listing-table a.contenttype-genweb-organs-document:before,
-.template-folder_tabular_view .listing a.contenttype-genweb-organs-document:before
+.template-folder_tabular_view .listing a.contenttype-genweb-organs-document:before,
+.subnavbar .nav-list .active ul a[class^="contenttype-genweb-organs-document"] span:after,
+.subnavbar .nav-list .selected ul a[class^="contenttype-genweb-organs-document"] span:after,
+.subnavbar .nav-list .active ul a[class*=" contenttype-genweb-organs-document"] span:after,
+.subnavbar .nav-list .selected ul a[class*=" contenttype-genweb-organs-document"] span:after
 {
     background-position: -24px -24px !important;
 }
@@ -923,7 +939,11 @@ dt.contenttype-genweb-organs-acta:before,
 i.icon-genweb-organs-acta,
 span.icon-genweb-organs-acta,
 #listing-table a.contenttype-genweb-organs-acta:before,
-.template-folder_tabular_view .listing a.contenttype-genweb-organs-acta:before
+.template-folder_tabular_view .listing a.contenttype-genweb-organs-acta:before,
+.subnavbar .nav-list .active ul a[class^="contenttype-genweb-organs-acta"] span:after,
+.subnavbar .nav-list .selected ul a[class^="contenttype-genweb-organs-acta"] span:after,
+.subnavbar .nav-list .active ul a[class*=" contenttype-genweb-organs-acta"] span:after,
+.subnavbar .nav-list .selected ul a[class*=" contenttype-genweb-organs-acta"] span:after
 {
     background-position: -24px -24px !important;
 }
@@ -932,7 +952,11 @@ dt.contenttype-genweb-organs-punt:before,
 i.icon-genweb-organs-punt,
 span.icon-genweb-organs-punt,
 #listing-table a.contenttype-genweb-organs-punt:before,
-.template-folder_tabular_view .listing a.contenttype-genweb-organs-punt:before
+.template-folder_tabular_view .listing a.contenttype-genweb-organs-punt:before,
+.subnavbar .nav-list .active ul a[class^="contenttype-genweb-organs-punt"] span:after,
+.subnavbar .nav-list .selected ul a[class^="contenttype-genweb-organs-punt"] span:after,
+.subnavbar .nav-list .active ul a[class*=" contenttype-genweb-organs-punt"] span:after,
+.subnavbar .nav-list .selected ul a[class*=" contenttype-genweb-organs-punt"] span:after
 {
     background-position: -384px -168px !important;
 }
@@ -941,7 +965,11 @@ dt.contenttype-genweb-organs-audio:before,
 i.icon-genweb-organs-audio,
 span.icon-genweb-organs-audio,
 #listing-table a.contenttype-genweb-organs-audio:before,
-.template-folder_tabular_view .listing a.contenttype-genweb-organs-audio:before
+.template-folder_tabular_view .listing a.contenttype-genweb-organs-audio:before,
+.subnavbar .nav-list .active ul a[class^="contenttype-genweb-organs-audio"] span:after,
+.subnavbar .nav-list .selected ul a[class^="contenttype-genweb-organs-audio"] span:after,
+.subnavbar .nav-list .active ul a[class*=" contenttype-genweb-organs-audio"] span:after,
+.subnavbar .nav-list .selected ul a[class*=" contenttype-genweb-organs-audio"] span:after
 {
     background-position: -24px -0px !important;
 }
@@ -950,7 +978,11 @@ dt.contenttype-genweb-organs-file:before,
 i.icon-genweb-organs-file,
 span.icon-genweb-organs-file,
 #listing-table a.contenttype-genweb-organs-file:before,
-.template-folder_tabular_view .listing a.contenttype-genweb-organs-file:before
+.template-folder_tabular_view .listing a.contenttype-genweb-organs-file:before,
+.subnavbar .nav-list .active ul a[class^="contenttype-genweb-organs-file"] span:after,
+.subnavbar .nav-list .selected ul a[class^="contenttype-genweb-organs-file"] span:after,
+.subnavbar .nav-list .active ul a[class*=" contenttype-genweb-organs-file"] span:after,
+.subnavbar .nav-list .selected ul a[class*=" contenttype-genweb-organs-file"] span:after
 {
     background-position: -168px -168px !important;
 }
@@ -959,7 +991,11 @@ dt.contenttype-genweb-organs-subpunt:before,
 i.icon-genweb-organs-subpunt,
 span.icon-genweb-organs-subpunt,
 #listing-table a.contenttype-genweb-organs-subpunt:before,
-.template-folder_tabular_view .listing a.contenttype-genweb-organs-subpunt:before
+.template-folder_tabular_view .listing a.contenttype-genweb-organs-subpunt:before,
+.subnavbar .nav-list .active ul a[class^="contenttype-genweb-organs-subpunt"] span:after,
+.subnavbar .nav-list .selected ul a[class^="contenttype-genweb-organs-subpunt"] span:after,
+.subnavbar .nav-list .active ul a[class*=" contenttype-genweb-organs-subpunt"] span:after,
+.subnavbar .nav-list .selected ul a[class*=" contenttype-genweb-organs-subpunt"] span:after
 {
     background-position: -384px -168px !important;
 }
@@ -968,7 +1004,11 @@ dt.contenttype-genweb-organs-organsfolder:before,
 i.icon-genweb-organs-organsfolder,
 span.icon-genweb-organs-organsfolder,
 #listing-table a.contenttype-genweb-organs-organsfolder:before,
-.template-folder_tabular_view .listing a.contenttype-genweb-organs-organsfolder:before
+.template-folder_tabular_view .listing a.contenttype-genweb-organs-organsfolder:before,
+.subnavbar .nav-list .active ul a[class^="contenttype-genweb-organs-organsfolder"] span:after,
+.subnavbar .nav-list .selected ul a[class^="contenttype-genweb-organs-organsfolder"] span:after,
+.subnavbar .nav-list .active ul a[class*=" contenttype-genweb-organs-organsfolder"] span:after,
+.subnavbar .nav-list .selected ul a[class*=" contenttype-genweb-organs-organsfolder"] span:after
 {
     background-position: -384px -120px !important;
 }
@@ -977,7 +1017,11 @@ dt.contenttype-genweb-organs-acord:before,
 i.icon-genweb-organs-acord,
 span.icon-genweb-organs-acord,
 #listing-table a.contenttype-genweb-organs-acord:before,
-.template-folder_tabular_view .listing a.contenttype-genweb-organs-acord:before
+.template-folder_tabular_view .listing a.contenttype-genweb-organs-acord:before,
+.subnavbar .nav-list .active ul a[class^="contenttype-genweb-organs-acord"] span:after,
+.subnavbar .nav-list .selected ul a[class^="contenttype-genweb-organs-acord"] span:after,
+.subnavbar .nav-list .active ul a[class*=" contenttype-genweb-organs-acord"] span:after,
+.subnavbar .nav-list .selected ul a[class*=" contenttype-genweb-organs-acord"] span:after
 {
     background-position: -288px 0px !important;
 }
