added colors and bypass unrestricted in calendar portlet

--- a/genweb/organs/browser/stylesheets/genweb_organs.css
+++ b/genweb/organs/browser/stylesheets/genweb_organs.css
@@ -1976,7 +1976,7 @@ td.organevent.cal_has_events .popover-content a {
 }
 
 .cal_has_events {
-    background-color: #384e65;
+    background-color: #007BC0;
     text-shadow: none;
     cursor: pointer;
 }
