--- a/genweb/organs/browser/stylesheets/genweb_organs.css
+++ b/genweb/organs/browser/stylesheets/genweb_organs.css
@@ -2070,11 +2070,13 @@ a.calendari-seguent:hover  {
     border: 3px solid #f6f7f7 !important;
 }
 
-.cal_prev_month, .cal_next_month { opacity: .2; }
+.cal_prev_month, .cal_next_month {
+    opacity: .2;
+}
+
 .today {
-    border-width: 5px !important;
-    border-style: double !important;
-    border-color: #bdc8cf !important}
+    font-weight: bolder;
+}
 
 .allSessions {
     border-top: 1px solid #EEEEEE;
