img header now its changed via /manage

--- a/genweb/organs/browser/stylesheets/genweb_organs.css
+++ b/genweb/organs/browser/stylesheets/genweb_organs.css
@@ -17,10 +17,12 @@
 }
 
 @media only screen and (-webkit-min-device-pixel-ratio: 2), not all, not all, not all, only screen and (min-resolution: 192dpi), only screen and (min-resolution: 2dppx) {
-    .header-image {
-        /*background-size: auto !important;*/
+    
+    /*.header-image {
+        //background-size: auto !important;
         background-image: url("++resource++genweb.organs.stylesheets/capcalera_organs@2x.jpg") !important;
     }
+    */
     #viewlet-above-content-title,
     .documentFirstHeading,
     #viewlet-below-content-title,
@@ -1789,9 +1791,9 @@ dd.actionMenuContent.actionMenuContentColor {
 .portaltype-genweb-organs-sessio .modal-body {overflow-y: initial !important;}
 /* End problems cleantheme */
 
-.header-image {
+/*.header-image {
   background-image: url("++resource++genweb.organs.stylesheets/capcalera_organs@2x.jpg") !important;
-}
+}*/
 
 
 
