FAQ membres field and tab done

--- a/genweb/organs/browser/stylesheets/genweb_organs.css
+++ b/genweb/organs/browser/stylesheets/genweb_organs.css
@@ -2323,3 +2323,9 @@ a.calendari-seguent:hover  {
     right: 2.5%;
     margin: auto;
 }
+
+.faq_membres {
+    background: white;
+    border: 1px solid #b2b2b2;
+    padding: 10px;
+}
