Quitar opciones buscador + quitar Sobre Govern UPC

--- a/genweb/organs/browser/stylesheets/genweb_organs.css
+++ b/genweb/organs/browser/stylesheets/genweb_organs.css
@@ -2383,3 +2383,7 @@ a.calendari-seguent:hover  {
     margin-top: 0px;
     padding-top: 0px;
 }
+
+#search-filter .span4 {
+    margin-bottom: 0px !important;
+}
