Enlace a la sala

--- a/genweb/organs/browser/stylesheets/genweb_organs.css
+++ b/genweb/organs/browser/stylesheets/genweb_organs.css
@@ -170,6 +170,7 @@ input#form-widgets-enllacAudio,
 input#form-widgets-proposalPoint,
 input#form-widgets-agreement,
 input#form-widgets-recipients,
+input#form-widgets-linkSala,
 input#form-widgets-fromTitle {width: 98%;}
 
 /*  Hide view action tab */
