--- a/genweb/organs/browser/stylesheets/genweb_organs.css
+++ b/genweb/organs/browser/stylesheets/genweb_organs.css
@@ -2447,6 +2447,7 @@ a.calendari-seguent:hover  {
     border-top: 0px solid #b2b2b2;
 }
 
+#resultsVotesTab .fa-refresh:hover,
 #resultsVotesTab .removeVote:hover {
     color: #557c95;
     cursor: pointer;
